# epic

./: .gitignore  CMakeLists.txt  Makefile  README.md
archive/include/: gpu_jacobi.h  worlds.h
archive/src/: gpu_jacobi_v1_2d.cu  worlds.cpp
archive/tests/: .project  execute.cpp
harmonic/: .cproject  .project  execute.cpp  harmonic_profiler  naive.cu  naive.h  trials.h  trials_2d.cpp  trials_3d.cpp  worlds.h
harmonic/include/: cpu.h  gpu.h  gpu_jacobi.h  naive.h  worlds.h
harmonic/src/: cpu.cpp  gpu.cu  gpu_2d.cu  gpu_3d.cu  gpu_jacobi.cu  gpu_jacobi_v1_4d.cu  gpu_jacobi_v2.cu  gpu_utils.cu  naive.cu  worlds.cpp
harmonic/tests/: trials.cpp  trials.h
harmonic_tests/: .cproject  execute.cpp  trials.cpp  trials.h  trials_2d.cpp  trials_3d.cpp  trials_4d.cpp
include/: constants.h  error_codes.h  gpu_jacobi_v1.h  gpu_jacobi_v2.h  gpu_utils.h  harmonic.h  harmonic_gpu.h  harmonic_jacobi_gpu.h  harmonic_model.gpu.h  harmonic_sor_cpu.h  harmonic_sor_gpu.h
include/epic/: epic_navigation_node_harmonic.h  epic_navigation_node_ompl.h
include/epic/harmonic/: harmonic_legacy_cpu.h  harmonic_legacy_path_cpu.h
include/harmonic/: harmonic.h  harmonic_cpu.h  harmonic_gpu.h  harmonic_model_gpu.h  harmonic_path_cpu.h  harmonic_sor_gpu.h  harmonic_utilities_cpu.h
libepic/: Makefile
libepic/python/: __init__.py
libepic/python/epic/: harmonic_legacy_map.py  harmonic_map.py
libepic/src/harmonic/: harmonic_gpu.cu  harmonic_path_cpu.cpp
maps/: umass.yaml
python/: .harmonic.py.swp  harmonic.py  harmonic_map.py  struct_harmonic.py
python/epic/: __init__.py  epic_harmonic.py  harmonic.py  harmonic_legacy.py  harmonic_map.py
python/inertia/: __init__.py  harmonic.py  harmonic_map.py  inertia_harmonic.py
ros/catkin_ws/: .gitignore  execute.sh  rebuild.sh
ros/catkin_ws/src/epic/: CMakeLists.txt  epic_nav_core_plugin.xml  epic_plan_plugins.xml  package.xml
ros/catkin_ws/src/epic/include/epic/: epic_nav_core_plugin.h  epic_navigation_node.h  epic_navigation_node_harmonic.h  epic_navigation_node_harmonic_rviz.h  epic_node.h  epic_plan_nav_core.h
ros/catkin_ws/src/epic/launch/: epic_env.launch  epic_nav_core_plugin_basic.launch  epic_nav_core_plugin_maze.launch  epic_nav_core_plugin_maze_2.launch  epic_nav_core_plugin_maze_3.launch  epic_nav_core_plugin_maze_4.launch  epic_nav_core_plugin_umass.launch  epic_navigation_node_basic.launch  epic_navigation_node_maze.launch  epic_navigation_node_maze_1.launch  epic_navigation_node_umass.launch  epic_rviz_basic.launch  epic_rviz_maze_1.launch  epic_rviz_maze_2.launch  epic_rviz_maze_3.launch  epic_rviz_nav.launch
ros/catkin_ws/src/epic/libepic/include/epic/: constants.h  error_codes.h
ros/catkin_ws/src/epic/libepic/include/epic/harmonic/: harmonic_gpu.h  harmonic_legacy_cpu.h  harmonic_model_gpu.h  harmonic_utilities_gpu.h
ros/catkin_ws/src/epic/maps/: basic.yaml  maze_1.yaml  maze_2.yaml  maze_3.yaml  maze_4.yaml
ros/catkin_ws/src/epic/rviz/: default.rviz
ros/catkin_ws/src/epic/src/: epic_nav_core_plugin.cpp  epic_navigation_node.cpp  epic_navigation_node_harmonic.cpp  epic_navigation_node_harmonic_rviz.cpp  epic_navigation_node_main.cpp  epic_node.cpp  epic_plan_nav_core.cpp  epic_plan_node.cpp
ros/catkin_ws/src/epic/srv/: ComputePath.srv
ros_pkg/epic/: CMakeLists.txt  package.xml
ros_pkg/epic/include/epic/: epic_navigation_node_constants.h  epic_navigation_node_harmonic.h
ros_pkg/epic/launch/: epic_navigation_node_maze.launch
ros_pkg/epic/libepic/include/epic/: error_codes.h
ros_pkg/epic/libepic/include/epic/harmonic/: harmonic.h  harmonic_cpu.h  harmonic_path_cpu.h  harmonic_utilities_cpu.h
ros_pkg/epic/maps/: maze.yaml
ros_pkg/epic/rviz/: default.rviz
ros_pkg/epic/src/: epic_navigation_node.cpp  epic_navigation_node_harmonic.cpp  epic_navigation_node_ompl.cpp
src/: .harmonic_sor_cpu.cpp.swp  cpu.cpp  epic_navigation_node_harmonic.cpp  gpu_jacobi_v1_3d.cu  gpu_jacobi_v2.cu  harmonic_sor_cpu.cpp  harmonic_sor_gpu.cu  naive.cu
src/harmonic/: harmonic_cpu.cpp  harmonic_gpu.cu  harmonic_legacy_cpu.cpp  harmonic_legacy_path_cpu.cpp  harmonic_model_gpu.cu  harmonic_path_cpu.cpp  harmonic_sor_cpu.cpp  harmonic_sor_gpu.cu  harmonic_utilities_cpu.cpp  harmonic_utilities_gpu.cu
srv/: GetCell.srv  ModifyGoals.srv  SetCells.srv
tests/: .gitignore
tests/batch/: batch.py  compare_precision.py
tests/maps/: compare_precision.py  maps.py  umass_lpr.xcf  umass_lpr_backup.xcf
visualizer/: visualizer.py
